src/objects/AccessToken__mdt.object
<CustomObject>
    <fields>
        <fullName>AccessExpiryTime__c</fullName>
        <label>AccessExpiryTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AccessTokenUrl__c</fullName>
        <label>AccessTokenUrl</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AccessToken__c</fullName>
        <label>AccessToken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>AccessToken</label>
    <pluralLabel>AccessTokens</pluralLabel>
</CustomObject>